# rust-api-mongodb

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: rust-api-mongodb-ci.yml
src/api/: user_api.rs
src/models/: user_model.rs
src/repository/: mongodb_repo.rs
