[package]
name = "rust-api-mongodb"
version = "0.1.0"
authors = ["Sergio Triana Escobedo <stescobedo.31@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
tokio = "1.36.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]